bad/mod_invalid_types_array_array.example_compiler_output
ERROR
[1mbad/mod_invalid_types_array_array.lat:3:16: [1;31merror: [0;1mmodulo is defined only for int values, not `string[]` and `string[]`[m
	new string[3] % new string[4];
	              [1;32m^[m
